syntax = "proto3";

package pb;

option go_package = "./pkg/pb";

message UserByCpfRequest {
    string cpf = 1;
}